# catlang

./: .env.txt  .gitignore  .mypy.ini  .ruff.toml  GITHUB_ABOUT.md  LICENSE  README.md  env_template.txt  pyproject.toml  pytest.ini  requirements.txt  run_mcp_server.py  test_mcp_tools.py
.cursor/: README.md  mcp.json
config/: providers.yaml  server.yaml
example_n8n_workflow/: Json string validator via webhook.json
scripts/: verify_setup.py
src/: __init__.py  workflow.py
src/llm_provider/: __init__.py  base.py  config.py  factory.py  openai.py  openrouter.py  xai.py
src/mcp_server/: __init__.py  constants.py  context.py  decorators.py  main.py  server.py  transport.py
src/mcp_server/resources/: __init__.py  guides.py  handlers.py
src/mcp_server/tools/: __init__.py  analyze.py  extract.py  generate.py  handlers.py  registry.py  schemas.py  validate.py
src/workflow_engine/: __init__.py
tests/: __init__.py  conftest.py  test_example.py  test_fase10_mcp_integration.py  test_fase2_workflow_refactor.py  test_fase3_mcp_server.py  test_fase4_tool_registration.py  test_fase5_analyze_n8n_workflow.py  test_fase6_extract_custom_logic.py  test_fase7_generate_langgraph_implementation.py  test_fase8_integration.py  test_fase8_validate_implementation.py  test_fase9_resource_management.py  test_llm_provider_base.py  test_llm_provider_config.py  test_llm_provider_factory.py  test_llm_provider_integration.py  test_llm_provider_openai.py  test_mcp_server.py
